--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <h2>Take the Survey</h2>
             <p>Help us understand your hair loss better by completing our quick survey. This will enable us to provide tailored recommendations for your needs.</p>
             <div class="survey-embed">
-                <iframe src="https://docs.google.com/forms/d/e/4ybVou8CxfwVqzJB7/viewform?embedded=true" width="100%" height="600" frameborder="0" allowfullscreen></iframe>
+                <iframe src="https://forms.gle/2u2yBhYvTBNpTst86" width="100%" height="600" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
     </section>
