--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hair Loss Solutions</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Header -->
@@ -13,19 +14,18 @@
             <h1>Hair Loss Solutions</h1>
             <nav>
                 <a href="#understanding">Understanding Hair Loss</a>
-                <a href="#treatment">Treatment Options</a>
-                <a href="#survey">Take the Survey</a>
+                <a href="#treatments">Treatment Options</a>
+                <a href="https://forms.gle/4ybVou8CxfwVqzJB7" target="_blank">Take the Survey</a>
                 <a href="#method">Our Method</a>
-                <a href="#before-after">Before & After</a>
             </nav>
         </div>
     </header>
 
     <!-- Hero Section -->
-    <section class="hero">
-        <div class="hero-text">
-            <h2>Find Your Path to Healthy Hair</h2>
-            <p>Understand the causes, explore treatments, and discover a method that works for you.</p>
+    <section class="hero" style="background-image: url('images/hero.png'); background-size: cover; background-position: center; padding: 60px 20px; color: white; text-align: center;">
+        <div class="hero-overlay">
+            <h2>Discover Solutions Backed by Science</h2>
+            <p>Your journey to healthier hair starts here.</p>
             <a href="#survey" class="cta-button">Take the Survey</a>
         </div>
     </section>
@@ -34,28 +34,17 @@
     <section id="understanding" class="content-section">
         <div class="container">
             <h2>Understanding Hair Loss</h2>
-            <p>Hair loss affects millions of people worldwide and can be caused by genetics, hormonal imbalances, medical conditions, and lifestyle factors. Learning about the root causes is the first step toward effective treatment.</p>
-            <a href="understanding-hair-loss.html" class="read-more">Read the Full Article</a>
+            <p>Hair loss is a complex issue with various causes and contributing factors. Learn more about the science and data behind it.</p>
+            <a href="understanding-hair-loss.html" class="link-button">Read More</a>
         </div>
     </section>
 
     <!-- Treatment Options -->
-    <section id="treatment" class="content-section">
+    <section id="treatments" class="content-section" style="background-color: #f9f9f9;">
         <div class="container">
             <h2>Treatment Options</h2>
-            <p>From medications like Minoxidil and Finasteride to PRP therapy and hair transplants, explore the treatments that can help restore your confidence. Each option comes with its own benefits and considerations.</p>
-            <a href="treatment-options.html" class="read-more">Read the Full Article</a>
-        </div>
-    </section>
-
-    <!-- Survey -->
-    <section id="survey" class="content-section">
-        <div class="container">
-            <h2>Take the Survey</h2>
-            <p>Help us understand your hair loss better by completing our quick survey. This will enable us to provide tailored recommendations for your needs.</p>
-            <div class="survey-embed">
-                <iframe src="https://forms.gle/2u2yBhYvTBNpTst86" width="100%" height="600" frameborder="0" allowfullscreen></iframe>
-            </div>
+            <p>Explore the most effective treatments available, backed by scientific research and data. Understand their efficacy and side effects.</p>
+            <a href="treatment-options.html" class="link-button">Learn More</a>
         </div>
     </section>
 
@@ -63,28 +52,16 @@
     <section id="method" class="content-section">
         <div class="container">
             <h2>Our Method</h2>
-            <ul>
-                <li><strong>Backed by Data and Science:</strong> We rely on proven treatments and research to guide our recommendations.</li>
-                <li><strong>Not a One-Time Fix:</strong> Effective hair loss management requires continuous monitoring and adjustments.</li>
-                <li><strong>Personalized Care:</strong> Using advanced technology, we tailor treatments to meet your unique needs.</li>
+            <ul class="features-list">
+                <li><strong>Backed by Data and Science:</strong> We rely on proven research to guide our solutions.</li>
+                <li><strong>Continuous Care:</strong> Hair loss requires ongoing monitoring and treatment, not a one-time fix.</li>
+                <li><strong>Personalized Approach:</strong> Leveraging technology to tailor solutions for each individual.</li>
             </ul>
         </div>
     </section>
 
-    <!-- Before and After -->
-    <section id="before-after" class="content-section">
-        <div class="container">
-            <h2>Before & After</h2>
-            <p>See real results from individuals who have successfully managed hair loss.</p>
-            <div class="gallery">
-                <img src="images/before1.jpg" alt="Before treatment">
-                <img src="images/after1.jpg" alt="After treatment">
-            </div>
-        </div>
-    </section>
-
     <!-- Footer -->
-    <footer>
+    <footer style="background-color: #333; color: white; padding: 20px 0; text-align: center;">
         <div class="container">
             <p>© 2024 Hair Loss Solutions. All rights reserved.</p>
         </div>
