--- a/understanding-hair-loss.html
+++ b/understanding-hair-loss.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Understanding Hair Loss</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Header -->
@@ -14,72 +15,149 @@
             <nav>
                 <a href="index.html">Home</a>
                 <a href="treatment-options.html">Treatment Options</a>
-                <a href="index.html#survey">Survey</a>
-                <a href="index.html#method">Our Method</a>
+                <a href="survey-link.html">Take the Survey</a>
+                <a href="#causes">Causes</a>
+                <a href="#factors">Key Factors</a>
             </nav>
         </div>
     </header>
 
-    <!-- Introduction -->
-    <section class="intro">
-        <div class="container">
-            <h2>What Causes Hair Loss?</h2>
-            <p>Hair loss is a complex issue with various causes, ranging from genetic predisposition to lifestyle factors. Understanding the root cause is essential for effective treatment.</p>
+    <!-- Hero Section -->
+    <section class="hero" style="background-image: url('images/hair-loss-abstract.jpg'); background-size: cover; color: white; text-align: center; padding: 50px 0;">
+        <div class="hero-text">
+            <h2>The Causes of Hair Loss: A Deep Dive into Genetics, Hormones, and More</h2>
+            <p>Explore the underlying reasons behind hair loss and its scientific explanations.</p>
         </div>
     </section>
 
-    <!-- Causes of Hair Loss -->
-    <section class="causes content-section">
+    <!-- Summary Section -->
+    <section id="summary" class="content-section" style="padding: 40px 20px; background-color: #f2f2f2;">
         <div class="container">
-            <h2>Causes of Hair Loss</h2>
-            <ul>
-                <li><strong>Genetics:</strong> Androgenetic alopecia, or pattern hair loss, is inherited and affects both men and women.</li>
-                <li><strong>Hormonal Imbalances:</strong> Conditions like PCOS and hormonal shifts during pregnancy or menopause can contribute to hair loss.</li>
-                <li><strong>Medical Conditions:</strong> Thyroid disorders, alopecia areata, and certain autoimmune diseases can lead to hair loss.</li>
-                <li><strong>Stress and Lifestyle:</strong> High stress levels, poor diet, and lack of sleep can exacerbate hair shedding.</li>
-                <li><strong>Medications:</strong> Drugs for chemotherapy, blood pressure, and other conditions often list hair loss as a side effect.</li>
-            </ul>
-        </div>
-    </section>
-
-    <!-- The Science Behind Hair Loss -->
-    <section class="science content-section">
-        <div class="container">
-            <h2>The Science Behind Hair Loss</h2>
-            <p>Hair loss occurs when the hair growth cycle is disrupted. This cycle consists of three main phases:</p>
+            <h2>Summary: Key Causes of Hair Loss</h2>
             <ol>
-                <li><strong>Anagen:</strong> The active growth phase lasting 2-7 years.</li>
-                <li><strong>Catagen:</strong> The transition phase lasting about 10 days.</li>
-                <li><strong>Telogen:</strong> The resting phase, after which hair sheds and the cycle restarts.</li>
+                <li><a href="#key-causes">Genetic Factors: The Role of Androgenetic Alopecia (AGA)</a></li>
+                <li><a href="#hormonal-imbalances">Hormonal Imbalances</a></li>
+                <li><a href="#autoimmune-conditions">Autoimmune and Medical Conditions</a></li>
+                <li><a href="#nutritional-deficiencies">Nutritional Deficiencies</a></li>
+                <li><a href="#stress">Stress</a></li>
+                <li><a href="#environmental-lifestyle">Environmental and Lifestyle Factors</a></li>
+                <li><a href="#medications">Medications and Treatments</a></li>
             </ol>
-            <p>Conditions like androgenetic alopecia shorten the anagen phase, causing hair follicles to shrink and produce thinner, weaker hair over time.</p>
         </div>
     </section>
 
-    <!-- Diagnosing Hair Loss -->
-    <section class="diagnosis content-section">
+    <!-- Content Section -->
+    <section id="causes" class="content-section" style="padding: 40px 20px;">
         <div class="container">
-            <h2>Diagnosing Hair Loss</h2>
-            <p>Accurate diagnosis is crucial for effective treatment. Common diagnostic methods include:</p>
+            <h2>The Science of Hair Growth</h2>
+            <p>Hair growth follows a cyclical process with three distinct phases:</p>
             <ul>
-                <li><strong>Scalp Examination:</strong> A visual assessment of hair thinning and scalp health.</li>
-                <li><strong>Blood Tests:</strong> To identify underlying conditions like thyroid imbalances or nutrient deficiencies.</li>
-                <li><strong>Trichoscopy:</strong> A detailed examination of the scalp and hair follicles using a specialized device.</li>
+                <li><strong>Anagen (Growth Phase):</strong> Hair grows actively from the follicle. This phase lasts 2–6 years.</li>
+                <li><strong>Catagen (Transition Phase):</strong> Hair growth halts, and the follicle begins to shrink. This phase lasts 2–3 weeks.</li>
+                <li><strong>Telogen (Resting Phase):</strong> Hair rests for 2–4 months before shedding.</li>
             </ul>
+            <p>Disruptions in this cycle, whether due to genetic, hormonal, or environmental factors, lead to hair loss.</p>
         </div>
     </section>
 
-    <!-- Call to Action -->
-    <section class="cta">
+    <!-- Key Causes Section -->
+    <section id="key-causes" class="content-section" style="background-color: #f9f9f9; padding: 40px 20px;">
         <div class="container">
-            <h2>Learn More</h2>
-            <p>Understanding your hair loss is the first step to finding a solution. Take our survey to get personalized insights and treatment recommendations.</p>
-            <a href="index.html#survey" class="cta-button">Take the Survey</a>
+            <h2>1. Genetic Factors: The Role of Androgenetic Alopecia (AGA)</h2>
+            <p>Androgenetic alopecia, commonly known as male or female pattern baldness, is the most prevalent form of hair loss. It affects:</p>
+            <ul>
+                <li><strong>50% of men and 25% of women by age 50</strong></li>
+            </ul>
+            <h3>How Genetics Drive Hair Loss</h3>
+            <ul>
+                <li>AGA is polygenic, meaning multiple genes influence its development. These genes are inherited from both maternal and paternal lineages.</li>
+                <li>A key gene is the <strong>AR (Androgen Receptor)</strong> gene, located on the X chromosome. It increases sensitivity to androgens like dihydrotestosterone (DHT).</li>
+            </ul>
+            <h3>The Role of DHT</h3>
+            <p><strong>Dihydrotestosterone (DHT)</strong> is a derivative of testosterone, formed by the enzyme <strong>5-alpha reductase</strong>. It binds to androgen receptors in hair follicles, shrinking them in a process called follicular miniaturization.</p>
+        </div>
+    </section>
+
+    <!-- Hormonal Imbalances Section -->
+    <section id="hormonal-imbalances" class="content-section" style="padding: 40px 20px;">
+        <div class="container">
+            <h2>2. Hormonal Imbalances</h2>
+            <p>Hair follicles are highly sensitive to hormonal fluctuations, which can disrupt the hair growth cycle.</p>
+            <h3>Postpartum Hair Loss</h3>
+            <p>After childbirth, estrogen levels drop sharply, leading to temporary shedding, known as <strong>telogen effluvium</strong>.</p>
+            <h3>Thyroid Disorders</h3>
+            <p>Both hypothyroidism and hyperthyroidism disrupt metabolic processes, impairing follicle function.</p>
+            <h3>Polycystic Ovary Syndrome (PCOS)</h3>
+            <p>Women with PCOS have elevated androgen levels, leading to male-pattern hair thinning on the scalp.</p>
+        </div>
+    </section>
+
+    <!-- Autoimmune and Medical Conditions Section -->
+    <section id="autoimmune-conditions" class="content-section" style="background-color: #f9f9f9; padding: 40px 20px;">
+        <div class="container">
+            <h2>3. Autoimmune and Medical Conditions</h2>
+            <p>Autoimmune disorders and medical conditions can significantly impact hair health:</p>
+            <h3>Alopecia Areata</h3>
+            <p>An autoimmune disorder in which the immune system attacks hair follicles, causing patchy hair loss.</p>
+            <h3>Scarring Alopecia</h3>
+            <p>Diseases like lichen planopilaris destroy hair follicles, leading to irreversible hair loss.</p>
+            <h3>Systemic Illnesses</h3>
+            <p>Chronic conditions like diabetes can interfere with nutrient delivery to hair follicles.</p>
+        </div>
+    </section>
+
+    <!-- Nutritional Deficiencies Section -->
+    <section id="nutritional-deficiencies" class="content-section" style="padding: 40px 20px;">
+        <div class="container">
+            <h2>4. Nutritional Deficiencies</h2>
+            <p>Key nutrients like iron, protein, and vitamin D are vital for healthy hair:</p>
+            <h3>Iron Deficiency</h3>
+            <p>Iron is essential for hemoglobin production, which delivers oxygen to hair follicles.</p>
+            <h3>Protein Deficiency</h3>
+            <p>Lack of dietary protein can halt hair growth, causing diffuse hair loss.</p>
+            <h3>Vitamin D Deficiency</h3>
+            <p>Vitamin D regulates hair follicle cycling, and deficiencies can lead to stunted growth.</p>
+        </div>
+    </section>
+
+    <!-- Stress Section -->
+    <section id="stress" class="content-section" style="background-color: #f9f9f9; padding: 40px 20px;">
+        <div class="container">
+            <h2>5. Stress: The Trigger for Telogen Effluvium</h2>
+            <p>Both acute and chronic stress can disrupt the hair growth cycle:</p>
+            <h3>Acute Stress</h3>
+            <p>Emotional or physical stress can lead to telogen effluvium, where many hairs prematurely enter the telogen phase.</p>
+            <h3>Chronic Stress</h3>
+            <p>Long-term stress elevates cortisol levels, impairing follicle function and reducing hair growth.</p>
+        </div>
+    </section>
+
+    <!-- Environmental and Lifestyle Factors Section -->
+    <section id="environmental-lifestyle" class="content-section" style="padding: 40px 20px;">
+        <div class="container">
+            <h2>6. Environmental and Lifestyle Factors</h2>
+            <p>Lifestyle choices and environmental exposures can damage hair health:</p>
+            <h3>Hairstyling and Mechanical Damage</h3>
+            <p>Tight hairstyles and heat styling tools can cause traction alopecia and breakage.</p>
+            <h3>Pollution</h3>
+            <p>Particulate matter induces oxidative stress, leading to follicle damage.</p>
+            <h3>Smoking and Alcohol</h3>
+            <p>Smoking reduces blood flow to the scalp, and heavy alcohol consumption exacerbates nutrient deficiencies.</p>
+        </div>
+    </section>
+
+    <!-- Medications and Treatments Section -->
+    <section id="medications" class="content-section" style="background-color: #f9f9f9; padding: 40px 20px;">
+        <div class="container">
+            <h2>7. Medications and Treatments</h2>
+            <p>Certain medications and treatments can cause hair loss:</p>
+            <h3>Drugs That Cause Hair Loss</h3>
+            <p>Common culprits include chemotherapy drugs, beta-blockers, and retinoids.</p>
         </div>
     </section>
 
     <!-- Footer -->
-    <footer>
+    <footer style="background-color: #333; color: white; padding: 20px 0; text-align: center;">
         <div class="container">
             <p>© 2024 Hair Loss Solutions. All rights reserved.</p>
         </div>
